# raspi_setup

./: .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  install.sh  make_requirements.sh  presetup.sh  pyproject.toml  requirements.txt
config.example/: amedas.conf  bme280.conf  check.conf  metrics.conf  mhz19.conf  speedtest.conf  start.conf
etc/systemd/system/: amedas.service  amedas.timer  blynk.service  bme280.service  bme280.timer  check.service  check.timer  clock.service  metrics.service  metrics.timer  mhz19.service  mhz19.timer  on_boot.service  speedtest.service  speedtest.timer
